# AI_Dev_Mate

./: .env.example  .env.template  .gitignore  CODE_REVIEW_ENHANCEMENT.md  MODEL_QUICK_REFERENCE.md  OLLAMA_MODEL_GUIDE.md  README.md  REFACTORED_CODE_REVIEW_GUIDE.md  TIMEOUT_FIX_GUIDE.md  new_code_review_structure.json  pyproject.toml  requirements.txt  sample_code_review_output.json  test_detailed_parsing.py  test_file_analysis_fix.py  test_new_format.py
.aidm_index/: index.json
examples/: use_different_models.py
src/: main.py
src/config/: settings.py
src/core/: exceptions.py  models.py  utils.py
src/modules/: code_review.py  commit_generator.py  doc_generator.py  repo_indexer_task.py  test_generator.py
src/services/: file_service.py  git_service.py  ollama_service.py  repo_indexer.py
src/utils/: console.py  decorators.py  gitignore_utils.py  logger.py  reporter.py  themes.py
